v1/docs/ModelsCertificateStoreTypesCertificateStoreTypeEntryParameter.md
# ModelsCertificateStoreTypesCertificateStoreTypeEntryParameter

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**StoreTypeId** | Pointer to **int32** |  | [optional] 
**Name** | Pointer to **string** |  | [optional] 
**DisplayName** | Pointer to **string** |  | [optional] 
**Type** | Pointer to **string** |  | [optional] 
**RequiredWhen** | Pointer to **map[string]bool** |  | [optional] 
**DependsOn** | Pointer to **string** |  | [optional] 
**DefaultValue** | Pointer to **string** |  | [optional] 
**Options** | Pointer to **string** |  | [optional] 

## Methods

### NewModelsCertificateStoreTypesCertificateStoreTypeEntryParameter

`func NewModelsCertificateStoreTypesCertificateStoreTypeEntryParameter() *ModelsCertificateStoreTypesCertificateStoreTypeEntryParameter`

NewModelsCertificateStoreTypesCertificateStoreTypeEntryParameter instantiates a new ModelsCertificateStoreTypesCertificateStoreTypeEntryParameter object
This constructor will assign default values to properties that have it defined,
and makes sure properties required by API are set, but the set of arguments
will change when the set of required properties is changed

### NewModelsCertificateStoreTypesCertificateStoreTypeEntryParameterWithDefaults

`func NewModelsCertificateStoreTypesCertificateStoreTypeEntryParameterWithDefaults() *ModelsCertificateStoreTypesCertificateStoreTypeEntryParameter`

NewModelsCertificateStoreTypesCertificateStoreTypeEntryParameterWithDefaults instantiates a new ModelsCertificateStoreTypesCertificateStoreTypeEntryParameter object
This constructor will only assign default values to properties that have it defined,
but it doesn't guarantee that properties required by API are set

### GetStoreTypeId

`func (o *ModelsCertificateStoreTypesCertificateStoreTypeEntryParameter) GetStoreTypeId() int32`

GetStoreTypeId returns the StoreTypeId field if non-nil, zero value otherwise.

### GetStoreTypeIdOk

`func (o *ModelsCertificateStoreTypesCertificateStoreTypeEntryParameter) GetStoreTypeIdOk() (*int32, bool)`

GetStoreTypeIdOk returns a tuple with the StoreTypeId field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetStoreTypeId

`func (o *ModelsCertificateStoreTypesCertificateStoreTypeEntryParameter) SetStoreTypeId(v int32)`

SetStoreTypeId sets StoreTypeId field to given value.

### HasStoreTypeId

`func (o *ModelsCertificateStoreTypesCertificateStoreTypeEntryParameter) HasStoreTypeId() bool`

HasStoreTypeId returns a boolean if a field has been set.

### GetName

`func (o *ModelsCertificateStoreTypesCertificateStoreTypeEntryParameter) GetName() string`

GetName returns the Name field if non-nil, zero value otherwise.

### GetNameOk

`func (o *ModelsCertificateStoreTypesCertificateStoreTypeEntryParameter) GetNameOk() (*string, bool)`

GetNameOk returns a tuple with the Name field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetName

`func (o *ModelsCertificateStoreTypesCertificateStoreTypeEntryParameter) SetName(v string)`

SetName sets Name field to given value.

### HasName

`func (o *ModelsCertificateStoreTypesCertificateStoreTypeEntryParameter) HasName() bool`

HasName returns a boolean if a field has been set.

### GetDisplayName

`func (o *ModelsCertificateStoreTypesCertificateStoreTypeEntryParameter) GetDisplayName() string`

GetDisplayName returns the DisplayName field if non-nil, zero value otherwise.

### GetDisplayNameOk

`func (o *ModelsCertificateStoreTypesCertificateStoreTypeEntryParameter) GetDisplayNameOk() (*string, bool)`

GetDisplayNameOk returns a tuple with the DisplayName field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetDisplayName

`func (o *ModelsCertificateStoreTypesCertificateStoreTypeEntryParameter) SetDisplayName(v string)`

SetDisplayName sets DisplayName field to given value.

### HasDisplayName

`func (o *ModelsCertificateStoreTypesCertificateStoreTypeEntryParameter) HasDisplayName() bool`

HasDisplayName returns a boolean if a field has been set.

### GetType

`func (o *ModelsCertificateStoreTypesCertificateStoreTypeEntryParameter) GetType() string`

GetType returns the Type field if non-nil, zero value otherwise.

### GetTypeOk

`func (o *ModelsCertificateStoreTypesCertificateStoreTypeEntryParameter) GetTypeOk() (*string, bool)`

GetTypeOk returns a tuple with the Type field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetType

`func (o *ModelsCertificateStoreTypesCertificateStoreTypeEntryParameter) SetType(v string)`

SetType sets Type field to given value.

### HasType

`func (o *ModelsCertificateStoreTypesCertificateStoreTypeEntryParameter) HasType() bool`

HasType returns a boolean if a field has been set.

### GetRequiredWhen

`func (o *ModelsCertificateStoreTypesCertificateStoreTypeEntryParameter) GetRequiredWhen() map[string]bool`

GetRequiredWhen returns the RequiredWhen field if non-nil, zero value otherwise.

### GetRequiredWhenOk

`func (o *ModelsCertificateStoreTypesCertificateStoreTypeEntryParameter) GetRequiredWhenOk() (*map[string]bool, bool)`

GetRequiredWhenOk returns a tuple with the RequiredWhen field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetRequiredWhen

`func (o *ModelsCertificateStoreTypesCertificateStoreTypeEntryParameter) SetRequiredWhen(v map[string]bool)`

SetRequiredWhen sets RequiredWhen field to given value.

### HasRequiredWhen

`func (o *ModelsCertificateStoreTypesCertificateStoreTypeEntryParameter) HasRequiredWhen() bool`

HasRequiredWhen returns a boolean if a field has been set.

### GetDependsOn

`func (o *ModelsCertificateStoreTypesCertificateStoreTypeEntryParameter) GetDependsOn() string`

GetDependsOn returns the DependsOn field if non-nil, zero value otherwise.

### GetDependsOnOk

`func (o *ModelsCertificateStoreTypesCertificateStoreTypeEntryParameter) GetDependsOnOk() (*string, bool)`

GetDependsOnOk returns a tuple with the DependsOn field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetDependsOn

`func (o *ModelsCertificateStoreTypesCertificateStoreTypeEntryParameter) SetDependsOn(v string)`

SetDependsOn sets DependsOn field to given value.

### HasDependsOn

`func (o *ModelsCertificateStoreTypesCertificateStoreTypeEntryParameter) HasDependsOn() bool`

HasDependsOn returns a boolean if a field has been set.

### GetDefaultValue

`func (o *ModelsCertificateStoreTypesCertificateStoreTypeEntryParameter) GetDefaultValue() string`

GetDefaultValue returns the DefaultValue field if non-nil, zero value otherwise.

### GetDefaultValueOk

`func (o *ModelsCertificateStoreTypesCertificateStoreTypeEntryParameter) GetDefaultValueOk() (*string, bool)`

GetDefaultValueOk returns a tuple with the DefaultValue field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetDefaultValue

`func (o *ModelsCertificateStoreTypesCertificateStoreTypeEntryParameter) SetDefaultValue(v string)`

SetDefaultValue sets DefaultValue field to given value.

### HasDefaultValue

`func (o *ModelsCertificateStoreTypesCertificateStoreTypeEntryParameter) HasDefaultValue() bool`

HasDefaultValue returns a boolean if a field has been set.

### GetOptions

`func (o *ModelsCertificateStoreTypesCertificateStoreTypeEntryParameter) GetOptions() string`

GetOptions returns the Options field if non-nil, zero value otherwise.

### GetOptionsOk

`func (o *ModelsCertificateStoreTypesCertificateStoreTypeEntryParameter) GetOptionsOk() (*string, bool)`

GetOptionsOk returns a tuple with the Options field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetOptions

`func (o *ModelsCertificateStoreTypesCertificateStoreTypeEntryParameter) SetOptions(v string)`

SetOptions sets Options field to given value.

### HasOptions

`func (o *ModelsCertificateStoreTypesCertificateStoreTypeEntryParameter) HasOptions() bool`

HasOptions returns a boolean if a field has been set.


[[Back to Model list]](../README.md#documentation-for-models) [[Back to API list]](../README.md#documentation-for-api-endpoints) [[Back to README]](../README.md)


